[gd_scene load_steps=8 format=3 uid="uid://cvy7ticfaekmf"]

[ext_resource type="Script" uid="uid://cv7qlku11d36e" path="res://Scripts/Menus/resolucao.gd" id="1_an1l5"]
[ext_resource type="Script" uid="uid://bjb4beg5ct1nm" path="res://Visual/teste_botao.gd" id="2_1vakh"]
[ext_resource type="PackedScene" uid="uid://cn0yfmj4x3uel" path="res://Scenes/Menus/painel_fundo.tscn" id="2_r0jop"]
[ext_resource type="Theme" uid="uid://bq6xwlkcamw5v" path="res://Visual/saveBotao.tres" id="3_3wcg6"]
[ext_resource type="PackedScene" uid="uid://dp04rhsw40lwt" path="res://Scenes/Menus/menu.tscn" id="3_d8ybj"]
[ext_resource type="StyleBox" uid="uid://dolq1wjvg4ca3" path="res://Visual/fundo.tres" id="6_778oj"]
[ext_resource type="Theme" uid="uid://bujci4me1jles" path="res://Visual/Labels.tres" id="7_3wcg6"]

[node name="resolucao" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an1l5")
metadata/_edit_horizontal_guides_ = [-47.0]

[node name="painelFundo" parent="." instance=ExtResource("2_r0jop")]
layout_mode = 1

[node name="resolucoes" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -85.5
offset_right = 45.0
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 15

[node name="R0" type="Button" parent="resolucoes"]
layout_mode = 2
theme = ExtResource("3_3wcg6")
text = "640x320"
script = ExtResource("2_1vakh")

[node name="R1" type="Button" parent="resolucoes"]
layout_mode = 2
theme = ExtResource("3_3wcg6")
text = "1280x720"
script = ExtResource("2_1vakh")

[node name="R2" type="Button" parent="resolucoes"]
layout_mode = 2
theme = ExtResource("3_3wcg6")
text = "1920x1080
"
script = ExtResource("2_1vakh")

[node name="R3" type="Button" parent="resolucoes"]
layout_mode = 2
theme = ExtResource("3_3wcg6")
text = "2560x1440"
script = ExtResource("2_1vakh")

[node name="fullScren" type="Button" parent="resolucoes"]
layout_mode = 2
theme = ExtResource("3_3wcg6")
text = "fuul
"
script = ExtResource("2_1vakh")

[node name="confirmar" type="Button" parent="resolucoes"]
layout_mode = 2
theme = ExtResource("3_3wcg6")
text = "confirmar
"
script = ExtResource("2_1vakh")
carregadorScena = true
scenaCarregar = ExtResource("3_d8ybj")

[node name="salvador" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="salvarPergunta" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -31.5
offset_right = 70.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("6_778oj")

[node name="nao" type="Button" parent="salvarPergunta"]
layout_mode = 0
offset_left = 84.0
offset_top = 29.0
offset_right = 122.0
offset_bottom = 60.0
theme = ExtResource("3_3wcg6")
text = "nao
"

[node name="sim" type="Button" parent="salvarPergunta"]
layout_mode = 0
offset_left = 8.0
offset_top = 29.0
offset_right = 44.0
offset_bottom = 60.0
theme = ExtResource("3_3wcg6")
text = "sim
"

[node name="Label" type="Label" parent="salvarPergunta"]
layout_mode = 0
offset_right = 140.0
offset_bottom = 23.0
theme = ExtResource("7_3wcg6")
text = "confirmar?"
horizontal_alignment = 1

[connection signal="pressed" from="resolucoes/R0" to="." method="_on_r_0_pressed"]
[connection signal="pressed" from="resolucoes/R1" to="." method="_on_r_1_pressed"]
[connection signal="pressed" from="resolucoes/R2" to="." method="_on_r_2_pressed"]
[connection signal="pressed" from="resolucoes/R3" to="." method="_on_r_3_pressed"]
[connection signal="pressed" from="resolucoes/fullScren" to="." method="_on_full_scren_pressed"]
[connection signal="pressed" from="resolucoes/confirmar" to="." method="_on_confirmar_pressed"]
[connection signal="timeout" from="salvador" to="." method="_on_salvador_timeout"]
[connection signal="pressed" from="salvarPergunta/nao" to="." method="_on_nao_pressed"]
[connection signal="pressed" from="salvarPergunta/sim" to="." method="_on_sim_pressed"]
